JG-2002-05-14-2: Doc:       Coding styleguide, format for special comments.

JG-2002-05-14-1: Bugfix:    MPI tight integration rsh wrapper contained
                            shortcut syntax not executed correctly by all
                            shells.

JG-2002-05-14-0: Cleanup:   Introduced an own pe task datatype in cull, that
                            replaces the former use of a complete job object
                            for each pe task.
                            Fixed some bugs in the handling of tightly 
                            integrated parallel jobs.
                 Issues:    #201, #221, #225

CR-2002-05-14-0: Cleanup:   Removed unused schedd variable in sge_c_gdi_add()

AH-2002-05-13-1: Change:    Do no longer flush events immediately after orders 
                            arrival to 'guarantee' scheduling is done not more 
                            often than specified with schedule_interval in 
                            sched_conf(5). 
                 Changed:   sge_qmaster

CR-2002-05-13-0: Enhancem.: new source files for sge_printf binary in utilbin

EB-2002-05-13-0: Bugfix:    qconf -se shows "reschedule_unknown_list" param.
                 Issues:    #248

EB-2002-05-09-0: Cleanup:   libgdi:
                            - Moved some functions into libuti
                            - Put all 'answer' specific functions into a module 
                            - Pooled code which was copied in the past
                            - Eliminated 'old' pe-range code. Range module
                              is used instead.
                            - Modified and added several ADOC comments 

EB-2002-05-08-0: Bugfix:    Fix of EB-2002-05-04-0

CR-2002-05-06-0: Testsuite: Fixed testsuite dependencies

AH-2002-05-06-1: Bugfix:    Fix typo in simple.sh job example

EB-2002-05-04-0: Cleanup:   Job object:
                            - moved some attributes into the environment